# bi-mvp-qt

./: .gitignore  pyproject.toml  requirements.txt
qt_mvp/: BasePage.py  HomePage.py  MBA.py  SeasonalTrendAnalysis.py  main.py
